# labquery

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
labquery/: __init__.py  cli.py  labio_server.py  lims_client.py  lims_server.py  measure.py  nl_layer.py  notify.py  plr_bridge.py  plr_runner.py  tools.py  well_utils.py  ws_server.py
labquery/static/: index.html
notebooks/: demo.ipynb
tests/: test_benchling_client.py  test_elabjournal_client.py  test_integration.py  test_lims_client.py  test_lims_server.py  test_measure.py  test_nl_layer.py  test_notify.py  test_plr_bridge.py  test_plr_runner.py  test_toy_problem.py  test_transfer.py  test_well_utils.py
