[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "labquery"
version = "0.1.0"
description = "Natural language interface for LIMS and liquid handler automation"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Joseph Moore", email = "joemoore94@gmail.com"}]
dependencies = [
    "anthropic>=0.40.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "pylabrobot>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[project.scripts]
labquery = "labquery.cli:main"

[tool.setuptools.packages.find]
include = ["labquery*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
